// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LayoutHeaderToolsComponent should match the snapshot when user is connected 1`] = `
<div>
  <ul
    class="fr-btns-group"
  >
    <div
      data-mockid="LayoutHeaderToolsLink"
    />
    <div
      data-mockid="LayoutHeaderToolsLink"
    />
    <div>
      LayoutHeaderAccountComponent
    </div>
    <div>
      LayoutHeaderLogoutButton
    </div>
  </ul>
</div>
`;

exports[`LayoutHeaderToolsComponent should match the snapshot, when AccountConfig?.endpoints are undefined 1`] = `
<div>
  <ul
    class="fr-btns-group"
  >
    <div
      data-mockid="LayoutHeaderToolsLink"
    />
    <div>
      LayoutHeaderAccountComponent
    </div>
  </ul>
</div>
`;

exports[`LayoutHeaderToolsComponent should match the snapshot, when AccountConfig?.endpoints.logout is undefined 1`] = `
<div>
  <ul
    class="fr-btns-group"
  >
    <div
      data-mockid="LayoutHeaderToolsLink"
    />
    <div>
      LayoutHeaderAccountComponent
    </div>
  </ul>
</div>
`;
